added continuous mode

--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "name": "Aphantasia.ipynb",
+      "name": "Illustra.ipynb",
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": []
@@ -21,18 +21,13 @@
         "id": "toWe1IoH7X35"
       },
       "source": [
-        "# Text to Image tool\r\n",
+        "# Illustra: Multi-text to Image\r\n",
         "\r\n",
         "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent) // made by [eps696](https://github.com/eps696) [Vadim Epstein]  \r\n",
-        "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [Hannu Toyryla](https://twitter.com/htoyryla) for ideas\r\n",
+        "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly) for ideas\r\n",
         "\r\n",
         "## Features \r\n",
-        "* complex requests:\r\n",
-        "  * image and/or text as main prompts  \r\n",
-        "   (composition similarity controlled with [SSIM](https://github.com/Po-Hsun-Su/pytorch-ssim) loss)\r\n",
-        "  * additional text prompts for fine details and to subtract (avoid) topics\r\n",
-        "  * criteria inversion (show \"the opposite\")\r\n",
-        "\r\n",
+        "* **continuously processes phrase lists** (e.g. illustrating lyrics)\r\n",
         "* generates [FFT-encoded](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) image (massive detailed textures, a la deepdream)\r\n",
         "* fast convergence\r\n",
         "* undemanding for RAM - fullHD/4K and above\r\n",
@@ -78,11 +73,22 @@
         "try: \r\n",
         "  !pip3 install googletrans==3.1.0a0\r\n",
         "  from googletrans import Translator, constants\r\n",
-        "  # from pprint import pprint\r\n",
         "  translator = Translator()\r\n",
         "except: pass\r\n",
         "!pip install ftfy\r\n",
-        "!pip install ssim\r\n",
+        "!pip install ssim # not needed, to avoid import error\r\n",
+        "\r\n",
+        "!apt-get -qq install ffmpeg\r\n",
+        "from google.colab import drive\r\n",
+        "drive.mount('/G', force_remount=True)\r\n",
+        "gdir = !ls /G/\r\n",
+        "gdir = '/G/%s/' % str(gdir[0])\r\n",
+        "%cd $gdir\r\n",
+        "work_dir = 'illustra'\r\n",
+        "work_dir = gdir + work_dir + '/'\r\n",
+        "import os\r\n",
+        "os.makedirs(work_dir, exist_ok=True)\r\n",
+        "%cd $work_dir\r\n",
         "\r\n",
         "import os\r\n",
         "import io\r\n",
@@ -94,6 +100,7 @@
         "import PIL\r\n",
         "from skimage import exposure\r\n",
         "from base64 import b64encode\r\n",
+        "import shutil\r\n",
         "\r\n",
         "import torch\r\n",
         "import torch.nn as nn\r\n",
@@ -111,8 +118,6 @@
         "import warnings\r\n",
         "warnings.filterwarnings(\"ignore\")\r\n",
         "\r\n",
-        "# !git clone https://github.com/openai/CLIP.git\r\n",
-        "# %cd /content/CLIP/\r\n",
         "!pip install git+https://github.com/openai/CLIP.git\r\n",
         "import clip\r\n",
         "model_vit, _ = clip.load('ViT-B/32')\r\n",
@@ -120,12 +125,8 @@
         "!git clone https://github.com/eps696/aphantasia\r\n",
         "%cd /content/aphantasia/\r\n",
         "from clip_fft import to_valid_rgb, fft_image, slice_imgs, checkout\r\n",
-        "from utils import pad_up_to, basename, img_list, img_read\r\n",
+        "from utils import pad_up_to, basename, file_list, img_list, img_read\r\n",
         "from progress_bar import ProgressIPy as ProgressBar\r\n",
-        "\r\n",
-        "workdir = '_out'\r\n",
-        "tempdir = os.path.join(workdir, 'ttt')\r\n",
-        "os.makedirs(tempdir, exist_ok=True)\r\n",
         "\r\n",
         "clear_output()\r\n",
         "\r\n",
@@ -149,38 +150,16 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "CbJ9K4Cq8MtB"
-      },
-      "source": [
-        "Type some `text` and/or upload some image to start.  \r\n",
-        "`fine_details` input would make micro details follow that topic.  \r\n",
-        "Put to `subtract` the topics, which you would like to avoid in the result.  \r\n",
-        "*NB: more prompts = more memory! (handled by auto-decreasing `samples` amount, hopefully you don't need to act).*  \r\n",
-        "`invert` the whole criteria, if you want to see \"the totally opposite\"."
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "JUvpdy8BWGuM",
         "cellView": "form"
       },
       "source": [
-        "#@title Input\r\n",
+        "#@title Upload text file\r\n",
         "\r\n",
-        "text = \"\" #@param {type:\"string\"}\r\n",
-        "fine_details = \"\" #@param {type:\"string\"}\r\n",
-        "subtract = \"\" #@param {type:\"string\"}\r\n",
         "translate = False #@param {type:\"boolean\"}\r\n",
-        "invert = False #@param {type:\"boolean\"}\r\n",
-        "upload_image = False #@param {type:\"boolean\"}\r\n",
-        "\r\n",
-        "if translate:\r\n",
-        "  text = translator.translate(text, dest='en').text\r\n",
-        "if upload_image:\r\n",
-        "  uploaded = files.upload()"
+        "uploaded = files.upload()"
       ],
       "execution_count": null,
       "outputs": []
@@ -191,12 +170,13 @@
         "id": "f3Sj0fxmtw6K"
       },
       "source": [
-        "`overscan` option produces semi-seamlessly tileable texture (when off, it's centered).  \r\n",
-        "`sync` value adds SSIM loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity. \r\n",
+        "Set the desired video resolution and `duration` (in sec). \r\n",
         "\r\n",
+        "Try setting `noise_scale` > 0 (maybe 4~8), if the images \"getting stuck\" with time.  \r\n",
+        "Set `overscan` to produce semi-seamlessly tileable texture (when off, it's centered).  \r\n",
         "Turn on `dual_model` to optimize with both CLIP models at once (eats more RAM!).  \r\n",
-        "Decrease `samples` if you face OOM for higher resolutions (especially when several prompts are used with dual model).  \r\n",
-        "Setting `steps` much higher (1000-..) will elaborate details and smoother tones, but may start throwing texts like graffiti."
+        "Decrease `samples` if you face OOM for higher resolutions.  \r\n",
+        "Increase `save_freq` for longer training. "
       ]
     },
     {
@@ -216,85 +196,41 @@
         "\n",
         "sideX = 1280 #@param {type:\"integer\"}\n",
         "sideY = 720 #@param {type:\"integer\"}\n",
+        "duration =  120#@param {type:\"integer\"}\n",
         "#@markdown > Tweaks & tuning\n",
         "overscan = True #@param {type:\"boolean\"}\n",
+        "noise_scale = 0. #@param {type:\"number\"}\n",
         "dual_model = False #@param {type:\"boolean\"}\n",
-        "sync =  0.3 #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
-        "steps = 200 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
-        "learning_rate = .05 \n",
         "save_freq = 1 #@param {type:\"integer\"}\n",
+        "learning_rate = .05\n",
+        "fps = 25\n",
         "\n",
         "if dual_model is True:\n",
         "  print(' using dual-model optimization')\n",
         "  model_rn, _ = clip.load('RN50')\n",
         "  samples = samples // 2\n",
-        "if len(fine_details) > 0:\n",
-        "  samples = int(samples * 0.9)\n",
-        "if len(subtract) > 0:\n",
-        "  samples = int(samples * 0.9)\n",
-        "print(' using %d samples' % samples)\n",
         "\n",
         "norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
-        "sign = 1. if invert is True else -1.\n",
         "\n",
-        "if upload_image:\n",
-        "  in_img = list(uploaded.values())[0]\n",
-        "  print(' image:', list(uploaded)[0])\n",
-        "  img_in = torch.from_numpy(imageio.imread(in_img).astype(np.float32)/255.).unsqueeze(0).permute(0,3,1,2).cuda()\n",
-        "  in_sliced = slice_imgs([img_in], samples, transform=norm_in)[0]\n",
-        "  img_enc = model_vit.encode_image(in_sliced).detach().clone()\n",
-        "  if dual_model is True:\n",
-        "    img_enc = torch.cat((img_enc, model_rn.encode_image(in_sliced).detach().clone()), 1)\n",
-        "  if sync > 0:\n",
-        "    ssim_loss = SSIM(window_size = 11)\n",
-        "    img_in = F.interpolate(img_in, (sideY, sideX)).float()\n",
-        "  else:\n",
-        "    del img_in\n",
-        "  del in_sliced; torch.cuda.empty_cache()\n",
+        "text_file = list(uploaded)[0]\n",
+        "texts = list(uploaded.values())[0].decode().split('\\n')\n",
+        "texts = [tt.strip() for tt in texts if len(tt.strip())>0 and tt[0] != '#']\n",
+        "print(' text file:', text_file)\n",
+        "print(' total lines:', len(texts))\n",
         "\n",
-        "if len(text) > 2:\n",
-        "  print(' macro:', text)\n",
-        "  if translate:\n",
-        "    translator = Translator()\n",
-        "    text = translator.translate(text, dest='en').text\n",
-        "    print(' translated to:', text) \n",
-        "  tx = clip.tokenize(text)\n",
-        "  txt_enc = model_vit.encode_text(tx.cuda()).detach().clone()\n",
-        "  if dual_model is True:\n",
-        "    txt_enc = torch.cat((txt_enc, model_rn.encode_text(tx.cuda()).detach().clone()), 1)\n",
-        "\n",
-        "if len(fine_details) > 0:\n",
-        "  print(' micro:', fine_details)\n",
-        "  if translate:\n",
-        "      translator = Translator()\n",
-        "      fine_details = translator.translate(fine_details, dest='en').text\n",
-        "      print(' translated to:', fine_details) \n",
-        "  tx2 = clip.tokenize(fine_details)\n",
-        "  txt_enc2 = model_vit.encode_text(tx2.cuda()).detach().clone()\n",
-        "  if dual_model is True:\n",
-        "      txt_enc2 = torch.cat((txt_enc2, model_rn.encode_text(tx2.cuda()).detach().clone()), 1)\n",
-        "\n",
-        "if len(subtract) > 0:\n",
-        "  print(' without:', subtract)\n",
-        "  if translate:\n",
-        "      translator = Translator()\n",
-        "      subtract = translator.translate(subtract, dest='en').text\n",
-        "      print(' translated to:', subtract) \n",
-        "  tx0 = clip.tokenize(subtract)\n",
-        "  txt_enc0 = model_vit.encode_text(tx0.cuda()).detach().clone()\n",
-        "  if dual_model is True:\n",
-        "      txt_enc0 = torch.cat((txt_enc0, model_rn.encode_text(tx0.cuda()).detach().clone()), 1)\n",
+        "workdir = os.path.join(work_dir, basename(text_file))\n",
+        "steps = int(duration * fps * save_freq / len(texts))\n",
         "\n",
         "shape = [1, 3, sideY, sideX]\n",
-        "param_f = fft_image \n",
-        "# param_f = pixel_image\n",
-        "# learning_rate = 1.\n",
-        "params, image_f = param_f(shape)\n",
+        "params, image_f = fft_image(shape)\n",
         "image_f = to_valid_rgb(image_f)\n",
         "optimizer = torch.optim.Adam(params, learning_rate)\n",
         "\n",
+        "outpic = ipy.Output()\n",
+        "outpic\n",
+        "  \n",
         "def save_img(img, fname=None):\n",
         "  img = np.array(img)[:,:,:]\n",
         "  img = np.transpose(img, (1,2,0))  \n",
@@ -303,38 +239,27 @@
         "    imageio.imsave(fname, np.array(img))\n",
         "    imageio.imsave('result.jpg', np.array(img))\n",
         "\n",
-        "def checkout(num):\n",
+        "def checkout(num, tempdir, pbar):\n",
         "  with torch.no_grad():\n",
         "    img = image_f().cpu().numpy()[0]\n",
         "  save_img(img, os.path.join(tempdir, '%03d.jpg' % num))\n",
         "  outpic.clear_output()\n",
         "  with outpic:\n",
         "    display(Image('result.jpg'))\n",
+        "  pbar.upd()\n",
         "\n",
-        "def train(i):\n",
+        "def train(i, txt_enc, tempdir, pbar):\n",
         "  loss = 0\n",
-        "  img_out = image_f()\n",
+        "  \n",
+        "  noise = noise_scale * torch.randn(1, 1, *params[0].shape[2:4], 1).cuda() if noise_scale > 0 else 0.\n",
+        "  img_out = image_f(noise)\n",
+        "  # img_out = image_f()\n",
         "\n",
-        "  micro = False if len(fine_details) > 0 else None\n",
-        "  imgs_sliced = slice_imgs([img_out], samples, norm_in, overscan=overscan, micro=micro)\n",
+        "  imgs_sliced = slice_imgs([img_out], samples, norm_in, overscan=overscan, micro=None)\n",
         "  out_enc = model_vit.encode_image(imgs_sliced[-1])\n",
         "  if dual_model is True: # use both clip models\n",
         "      out_enc = torch.cat((out_enc, model_rn.encode_image(imgs_sliced[-1])), 1)\n",
-        "  if upload_image:\n",
-        "      loss += sign * 100*torch.cosine_similarity(img_enc, out_enc, dim=-1).mean()\n",
-        "  if len(text) > 0: # input text\n",
-        "      loss += sign * 100*torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
-        "  if len(subtract) > 0: # subtract text\n",
-        "      loss += -sign * 100*torch.cosine_similarity(txt_enc0, out_enc, dim=-1).mean()\n",
-        "  if sync > 0 and upload_image: # image composition sync\n",
-        "      loss *= 1. + sync * (steps/(i+1) * ssim_loss(img_out, img_in) - 1)\n",
-        "  if len(fine_details) > 0: # input text for micro details\n",
-        "      imgs_sliced = slice_imgs([img_out], samples, norm_in, overscan=overscan, micro=True)\n",
-        "      out_enc2 = model_vit.encode_image(imgs_sliced[-1])\n",
-        "      if dual_model is True:\n",
-        "          out_enc2 = torch.cat((out_enc2, model_rn.encode_image(imgs_sliced[-1])), 1)\n",
-        "      loss += sign * 100*torch.cosine_similarity(txt_enc2, out_enc2, dim=-1).mean()\n",
-        "      del out_enc2; torch.cuda.empty_cache()\n",
+        "  loss -= 100*torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
         "  del img_out, imgs_sliced, out_enc; torch.cuda.empty_cache()\n",
         "\n",
         "  optimizer.zero_grad()\n",
@@ -342,20 +267,41 @@
         "  optimizer.step()\n",
         "  \n",
         "  if i % save_freq == 0:\n",
-        "    checkout(i // save_freq)\n",
+        "    checkout(i // save_freq, tempdir, pbar)\n",
         "\n",
-        "outpic = ipy.Output()\n",
-        "outpic\n",
+        "def process(txt, num):\n",
+        "  print(' ref text: ', txt)\n",
+        "  if translate:\n",
+        "    translator = Translator()\n",
+        "    txt = translator.translate(txt, dest='en').text\n",
+        "    print(' translated to:', txt)\n",
+        "  tx = clip.tokenize(txt).cuda()\n",
+        "  txt_enc = model_vit.encode_text(tx).detach().clone()\n",
+        "  if dual_model is True:\n",
+        "    txt_enc = torch.cat((txt_enc, model_rn.encode_text(tx).detach().clone()), 1)\n",
+        "  out_name = '%02d-%s' % (num, txt.translate(str.maketrans(dict.fromkeys(list(\"\\n',—|!?/:;\\\\\"), \"\"))).replace(' ', '_').replace('\"', ''))\n",
+        "  tempdir = os.path.join(workdir, out_name)\n",
+        "  os.makedirs(tempdir, exist_ok=True)\n",
         "\n",
-        "pbar = ProgressBar(steps)\n",
-        "for i in range(steps):\n",
-        "  train(i)\n",
-        "  _ = pbar.upd()\n",
+        "  pbar = ProgressBar(steps // save_freq)\n",
+        "  for i in range(steps):\n",
+        "    train(i, txt_enc, tempdir, pbar)\n",
         "\n",
-        "HTML(makevid(tempdir))\n",
-        "torch.save(params, tempdir + '.pt')\n",
-        "files.download(tempdir + '.pt')\n",
-        "files.download(tempdir + '.mp4')\n"
+        "  # shutil.copy(img_list(tempdir)[-1], os.path.join(workdir, '%s-%d.jpg' % (out_name, steps)))\n",
+        "  # os.system('ffmpeg -v warning -y -i %s\\%%03d.jpg \"%s.mp4\"' % (tempdir, os.path.join(workdir, out_name)))\n",
+        "  HTML(makevid(tempdir))\n",
+        "\n",
+        "for i, txt in enumerate(texts):\n",
+        "    process(txt, i)\n",
+        "\n",
+        "# %cd $work_dir\n",
+        "# vid_list = ['file ' + v.replace('\\\\', '/') for v in file_list(workdir, 'mp4')]\n",
+        "# with open('dir.txt', 'w') as ff:\n",
+        "  # ff.write('\\n'.join(vid_list))\n",
+        "# outname = basename(text_file) + '.mp4'\n",
+        "# !ffmpeg -y -v warning -f concat -i dir.txt -c:v copy $outname\n",
+        "# os.system('ffmpeg -y -v warning -f concat -i dir.txt -c:v copy %s.mp4' % basename(text_file))\n",
+        "# os.remove('dir.txt')\n"
       ],
       "execution_count": null,
       "outputs": []
