--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -82,7 +82,6 @@
         "  translator = Translator()\r\n",
         "except: pass\r\n",
         "!pip install ftfy\r\n",
-        "!pip install ssim\r\n",
         "\r\n",
         "import os\r\n",
         "import io\r\n",
@@ -111,11 +110,11 @@
         "import warnings\r\n",
         "warnings.filterwarnings(\"ignore\")\r\n",
         "\r\n",
-        "# !git clone https://github.com/openai/CLIP.git\r\n",
-        "# %cd /content/CLIP/\r\n",
         "!pip install git+https://github.com/openai/CLIP.git\r\n",
         "import clip\r\n",
         "model_vit, _ = clip.load('ViT-B/32')\r\n",
+        "!pip install git+https://github.com/Po-Hsun-Su/pytorch-ssim\r\n",
+        "import pytorch_ssim as ssim\r\n",
         "\r\n",
         "!git clone https://github.com/eps696/aphantasia\r\n",
         "%cd /content/aphantasia/\r\n",
@@ -219,7 +218,7 @@
         "#@markdown > Tweaks & tuning\n",
         "overscan = True #@param {type:\"boolean\"}\n",
         "dual_model = False #@param {type:\"boolean\"}\n",
-        "sync =  0.3 #@param {type:\"number\"}\n",
+        "sync =  0.01 #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 200 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
@@ -248,7 +247,7 @@
         "  if dual_model is True:\n",
         "    img_enc = torch.cat((img_enc, model_rn.encode_image(in_sliced).detach().clone()), 1)\n",
         "  if sync > 0:\n",
-        "    ssim_loss = SSIM(window_size = 11)\n",
+        "    ssim_loss = ssim.SSIM(window_size = 11)\n",
         "    img_in = F.interpolate(img_in, (sideY, sideX)).float()\n",
         "  else:\n",
         "    del img_in\n",
