--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -241,7 +241,7 @@
         "if upload_image:\n",
         "  in_img = list(uploaded.values())[0]\n",
         "  print(' image:', list(uploaded)[0])\n",
-        "  img_in = torch.from_numpy(imageio.imread(in_img).astype(np.float32)/255.).unsqueeze(0).permute(0,3,1,2).cuda()\n",
+        "  img_in = torch.from_numpy(imageio.imread(in_img).astype(np.float32)/255.).unsqueeze(0).permute(0,3,1,2).cuda()[:,:3,:,:]\n",
         "  in_sliced = slice_imgs([img_in], samples, transform=norm_in)[0]\n",
         "  img_enc = model_vit.encode_image(in_sliced).detach().clone()\n",
         "  if dual_model is True:\n",
