new models and reworked interpolation

--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -36,8 +36,8 @@
         "* generates [FFT-encoded](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) image (massive detailed textures, a la deepdream)\r\n",
         "* fast convergence\r\n",
         "* undemanding for RAM - fullHD/4K and above\r\n",
-        "* saving/loading FFT params to resume processing\r\n",
-        "* can use both CLIP models at once (ViT and RN50)\r\n"
+        "* saving/loading FFT snapshots to resume processing\r\n",
+        "* selectable CLIP model\r\n"
       ]
     },
     {
@@ -112,7 +112,6 @@
         "\r\n",
         "!pip install git+https://github.com/openai/CLIP.git\r\n",
         "import clip\r\n",
-        "model_vit, _ = clip.load('ViT-B/32')\r\n",
         "!pip install git+https://github.com/Po-Hsun-Su/pytorch-ssim\r\n",
         "import pytorch_ssim as ssim\r\n",
         "\r\n",
@@ -190,12 +189,12 @@
         "id": "f3Sj0fxmtw6K"
       },
       "source": [
-        "`overscan` option produces semi-seamlessly tileable texture (when off, it's centered).  \r\n",
+        "Select CLIP `model` (results do vary!). I prefer ViT for consistency.  \r\n",
+        "`overscan` option produces semi-seamlessly tileable texture (when off, it's more centered).  \r\n",
         "`sync` value adds SSIM loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity. \r\n",
         "\r\n",
-        "Turn on `dual_model` to optimize with both CLIP models at once (eats more RAM!).  \r\n",
-        "Decrease `samples` if you face OOM for higher resolutions (especially when several prompts are used with dual model).  \r\n",
-        "Setting `steps` much higher (1000-..) will elaborate details and smoother tones, but may start throwing texts like graffiti."
+        "Decrease `samples` if you face OOM (it's the main RAM eater).  \r\n",
+        "Setting `steps` much higher (1000-..) will elaborate details and make tones smoother, but may start throwing texts like graffiti."
       ]
     },
     {
@@ -215,25 +214,27 @@
         "\n",
         "sideX = 1280 #@param {type:\"integer\"}\n",
         "sideY = 720 #@param {type:\"integer\"}\n",
-        "#@markdown > Tweaks & tuning\n",
+        "#@markdown > Config\n",
+        "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
         "overscan = True #@param {type:\"boolean\"}\n",
-        "dual_model = False #@param {type:\"boolean\"}\n",
         "sync =  0.01 #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 200 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
-        "learning_rate = .05 \n",
+        "learning_rate = .05 #@param {type:\"number\"}\n",
         "save_freq = 1 #@param {type:\"integer\"}\n",
         "\n",
-        "if dual_model is True:\n",
-        "  print(' using dual-model optimization')\n",
-        "  model_rn, _ = clip.load('RN50')\n",
-        "  samples = samples // 2\n",
         "if len(fine_details) > 0:\n",
-        "  samples = int(samples * 0.9)\n",
+        "  samples = int(samples * 0.75)\n",
         "if len(subtract) > 0:\n",
-        "  samples = int(samples * 0.9)\n",
+        "  samples = int(samples * 0.75)\n",
         "print(' using %d samples' % samples)\n",
+        "\n",
+        "model_clip, _ = clip.load(model)\n",
+        "modsize = 288 if model == 'RN50x4' else 224\n",
+        "xmem = {'RN50':0.5, 'RN50x4':0.16, 'RN101':0.33}\n",
+        "if 'RN' in model:\n",
+        "  samples = int(samples * xmem[model])\n",
         "\n",
         "norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
         "sign = 1. if invert is True else -1.\n",
@@ -242,10 +243,8 @@
         "  in_img = list(uploaded.values())[0]\n",
         "  print(' image:', list(uploaded)[0])\n",
         "  img_in = torch.from_numpy(imageio.imread(in_img).astype(np.float32)/255.).unsqueeze(0).permute(0,3,1,2).cuda()[:,:3,:,:]\n",
-        "  in_sliced = slice_imgs([img_in], samples, transform=norm_in)[0]\n",
-        "  img_enc = model_vit.encode_image(in_sliced).detach().clone()\n",
-        "  if dual_model is True:\n",
-        "    img_enc = torch.cat((img_enc, model_rn.encode_image(in_sliced).detach().clone()), 1)\n",
+        "  in_sliced = slice_imgs([img_in], samples, modsize, transform=norm_in)[0]\n",
+        "  img_enc = model_clip.encode_image(in_sliced).detach().clone()\n",
         "  if sync > 0:\n",
         "    ssim_loss = ssim.SSIM(window_size = 11)\n",
         "    img_in = F.interpolate(img_in, (sideY, sideX)).float()\n",
@@ -260,9 +259,7 @@
         "    text = translator.translate(text, dest='en').text\n",
         "    print(' translated to:', text) \n",
         "  tx = clip.tokenize(text)\n",
-        "  txt_enc = model_vit.encode_text(tx.cuda()).detach().clone()\n",
-        "  if dual_model is True:\n",
-        "    txt_enc = torch.cat((txt_enc, model_rn.encode_text(tx.cuda()).detach().clone()), 1)\n",
+        "  txt_enc = model_clip.encode_text(tx.cuda()).detach().clone()\n",
         "\n",
         "if len(fine_details) > 0:\n",
         "  print(' micro:', fine_details)\n",
@@ -271,9 +268,7 @@
         "      fine_details = translator.translate(fine_details, dest='en').text\n",
         "      print(' translated to:', fine_details) \n",
         "  tx2 = clip.tokenize(fine_details)\n",
-        "  txt_enc2 = model_vit.encode_text(tx2.cuda()).detach().clone()\n",
-        "  if dual_model is True:\n",
-        "      txt_enc2 = torch.cat((txt_enc2, model_rn.encode_text(tx2.cuda()).detach().clone()), 1)\n",
+        "  txt_enc2 = model_clip.encode_text(tx2.cuda()).detach().clone()\n",
         "\n",
         "if len(subtract) > 0:\n",
         "  print(' without:', subtract)\n",
@@ -282,15 +277,14 @@
         "      subtract = translator.translate(subtract, dest='en').text\n",
         "      print(' translated to:', subtract) \n",
         "  tx0 = clip.tokenize(subtract)\n",
-        "  txt_enc0 = model_vit.encode_text(tx0.cuda()).detach().clone()\n",
-        "  if dual_model is True:\n",
-        "      txt_enc0 = torch.cat((txt_enc0, model_rn.encode_text(tx0.cuda()).detach().clone()), 1)\n",
+        "  txt_enc0 = model_clip.encode_text(tx0.cuda()).detach().clone()\n",
         "\n",
         "shape = [1, 3, sideY, sideX]\n",
         "param_f = fft_image \n",
         "# param_f = pixel_image\n",
         "# learning_rate = 1.\n",
-        "params, image_f = param_f(shape)\n",
+        "init_pt = params_pt if resume is True else None\n",
+        "params, image_f = param_f(shape, resume=init_pt)\n",
         "image_f = to_valid_rgb(image_f)\n",
         "optimizer = torch.optim.Adam(params, learning_rate)\n",
         "\n",
@@ -315,24 +309,20 @@
         "  img_out = image_f()\n",
         "\n",
         "  micro = False if len(fine_details) > 0 else None\n",
-        "  imgs_sliced = slice_imgs([img_out], samples, norm_in, overscan=overscan, micro=micro)\n",
-        "  out_enc = model_vit.encode_image(imgs_sliced[-1])\n",
-        "  if dual_model is True: # use both clip models\n",
-        "      out_enc = torch.cat((out_enc, model_rn.encode_image(imgs_sliced[-1])), 1)\n",
+        "  imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=micro)\n",
+        "  out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "  if upload_image:\n",
-        "      loss += sign * 100*torch.cosine_similarity(img_enc, out_enc, dim=-1).mean()\n",
+        "      loss += sign * torch.cosine_similarity(img_enc, out_enc, dim=-1).mean()\n",
         "  if len(text) > 0: # input text\n",
-        "      loss += sign * 100*torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
+        "      loss += sign * torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
         "  if len(subtract) > 0: # subtract text\n",
-        "      loss += -sign * 100*torch.cosine_similarity(txt_enc0, out_enc, dim=-1).mean()\n",
+        "      loss += -sign * torch.cosine_similarity(txt_enc0, out_enc, dim=-1).mean()\n",
         "  if sync > 0 and upload_image: # image composition sync\n",
         "      loss *= 1. + sync * (steps/(i+1) * ssim_loss(img_out, img_in) - 1)\n",
         "  if len(fine_details) > 0: # input text for micro details\n",
-        "      imgs_sliced = slice_imgs([img_out], samples, norm_in, overscan=overscan, micro=True)\n",
-        "      out_enc2 = model_vit.encode_image(imgs_sliced[-1])\n",
-        "      if dual_model is True:\n",
-        "          out_enc2 = torch.cat((out_enc2, model_rn.encode_image(imgs_sliced[-1])), 1)\n",
-        "      loss += sign * 100*torch.cosine_similarity(txt_enc2, out_enc2, dim=-1).mean()\n",
+        "      imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=True)\n",
+        "      out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
+        "      loss += sign * torch.cosine_similarity(txt_enc2, out_enc2, dim=-1).mean()\n",
         "      del out_enc2; torch.cuda.empty_cache()\n",
         "  del img_out, imgs_sliced, out_enc; torch.cuda.empty_cache()\n",
         "\n",
