--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -7,7 +7,8 @@
       "name": "Illustra.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -31,8 +32,8 @@
         "* generates [FFT-encoded](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) image (massive detailed textures, a la deepdream)\r\n",
         "* fast convergence\r\n",
         "* undemanding for RAM - fullHD/4K and above\r\n",
-        "* saving/loading FFT params to resume processing\r\n",
-        "* can use both CLIP models at once (ViT and RN50)\r\n"
+        "* saving/loading FFT snapshots to resume processing\r\n",
+        "* selectable CLIP model\r\n"
       ]
     },
     {
@@ -76,7 +77,6 @@
         "  translator = Translator()\r\n",
         "except: pass\r\n",
         "!pip install ftfy\r\n",
-        "!pip install ssim # not needed, to avoid import error\r\n",
         "\r\n",
         "!apt-get -qq install ffmpeg\r\n",
         "from google.colab import drive\r\n",
@@ -93,12 +93,13 @@
         "import os\r\n",
         "import io\r\n",
         "import time\r\n",
-        "from math import exp\r\n",
+        "import math\r\n",
+        "# from math import exp\r\n",
         "import random\r\n",
         "import imageio\r\n",
         "import numpy as np\r\n",
         "import PIL\r\n",
-        "from skimage import exposure\r\n",
+        "# from skimage import exposure\r\n",
         "from base64 import b64encode\r\n",
         "import shutil\r\n",
         "\r\n",
@@ -120,10 +121,11 @@
         "\r\n",
         "!pip install git+https://github.com/openai/CLIP.git\r\n",
         "import clip\r\n",
-        "model_vit, _ = clip.load('ViT-B/32')\r\n",
+        "!pip install git+https://github.com/Po-Hsun-Su/pytorch-ssim\r\n",
+        "import pytorch_ssim as ssim\r\n",
         "\r\n",
         "!git clone https://github.com/eps696/aphantasia\r\n",
-        "%cd /content/aphantasia/\r\n",
+        "%cd aphantasia/\r\n",
         "from clip_fft import to_valid_rgb, fft_image, slice_imgs, checkout\r\n",
         "from utils import pad_up_to, basename, file_list, img_list, img_read\r\n",
         "from progress_bar import ProgressIPy as ProgressBar\r\n",
@@ -134,6 +136,10 @@
         "if resume:\r\n",
         "  resumed = files.upload()\r\n",
         "  params_pt = list(resumed.values())[0]\r\n",
+        "\r\n",
+        "def ema(base, next, step):\r\n",
+        "    scale_ma = 1. / (step + 1)\r\n",
+        "    return next * scale_ma + base * (1.- scale_ma)\r\n",
         "\r\n",
         "def makevid(seq_dir, size=None):\r\n",
         "  out_sequence = seq_dir + '/%03d.jpg'\r\n",
@@ -170,13 +176,14 @@
         "id": "f3Sj0fxmtw6K"
       },
       "source": [
-        "Set the desired video resolution and `duration` (in sec). \r\n",
+        "Set the desired video resolution and `duration` (in sec).  \r\n",
+        "Select CLIP `model` (results do vary!). I prefer ViT for consistency.  \r\n",
         "\r\n",
-        "Try setting `noise_scale` > 0 (maybe 4~8), if the images \"getting stuck\" with time.  \r\n",
-        "Set `overscan` to produce semi-seamlessly tileable texture (when off, it's centered).  \r\n",
-        "Turn on `dual_model` to optimize with both CLIP models at once (eats more RAM!).  \r\n",
-        "Decrease `samples` if you face OOM for higher resolutions.  \r\n",
-        "Increase `save_freq` for longer training. "
+        "Set `overscan` to produce semi-seamlessly tileable texture (when off, it's more centered).  \r\n",
+        "Try adding `noise_scale` to explore some compositional aspects.  \r\n",
+        "Decrease `samples` if you face OOM (it's the main RAM eater).  \r\n",
+        "Increasing `steps` will elaborate details and make tones smoother, but may start throwing texts like graffiti (and will obviously take more time).  \r\n",
+        "`show_freq` controls preview frequency and doesn't affect the results (so set it higher to speed up process). "
       ]
     },
     {
@@ -196,21 +203,25 @@
         "\n",
         "sideX = 1280 #@param {type:\"integer\"}\n",
         "sideY = 720 #@param {type:\"integer\"}\n",
-        "duration =  120#@param {type:\"integer\"}\n",
-        "#@markdown > Tweaks & tuning\n",
-        "overscan = True #@param {type:\"boolean\"}\n",
+        "duration =  60#@param {type:\"integer\"}\n",
+        "#@markdown > Config\n",
+        "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
+        "overscan = False #@param {type:\"boolean\"}\n",
+        "keep = 'None' #@param ['None', 'all', 'last']\n",
         "noise_scale = 0. #@param {type:\"number\"}\n",
-        "dual_model = False #@param {type:\"boolean\"}\n",
+        "contrast = 1. #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
+        "steps = 200 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
-        "save_freq = 1 #@param {type:\"integer\"}\n",
-        "learning_rate = .05\n",
+        "learning_rate = .05 #@param {type:\"number\"}\n",
+        "show_freq = 10 #@param {type:\"integer\"}\n",
         "fps = 25\n",
         "\n",
-        "if dual_model is True:\n",
-        "  print(' using dual-model optimization')\n",
-        "  model_rn, _ = clip.load('RN50')\n",
-        "  samples = samples // 2\n",
+        "model_clip, _ = clip.load(model)\n",
+        "modsize = 288 if model == 'RN50x4' else 224\n",
+        "xmem = {'RN50':0.5, 'RN50x4':0.16, 'RN101':0.33}\n",
+        "if 'RN' in model:\n",
+        "  samples = int(samples * xmem[model])\n",
         "\n",
         "norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
         "\n",
@@ -221,12 +232,7 @@
         "print(' total lines:', len(texts))\n",
         "\n",
         "workdir = os.path.join(work_dir, basename(text_file))\n",
-        "steps = int(duration * fps * save_freq / len(texts))\n",
-        "\n",
-        "shape = [1, 3, sideY, sideX]\n",
-        "params, image_f = fft_image(shape)\n",
-        "image_f = to_valid_rgb(image_f)\n",
-        "optimizer = torch.optim.Adam(params, learning_rate)\n",
+        "workdir += '-%s' % model if 'RN' in model.upper() else ''\n",
         "\n",
         "outpic = ipy.Output()\n",
         "outpic\n",
@@ -239,69 +245,98 @@
         "    imageio.imsave(fname, np.array(img))\n",
         "    imageio.imsave('result.jpg', np.array(img))\n",
         "\n",
-        "def checkout(num, tempdir, pbar):\n",
-        "  with torch.no_grad():\n",
-        "    img = image_f().cpu().numpy()[0]\n",
-        "  save_img(img, os.path.join(tempdir, '%03d.jpg' % num))\n",
-        "  outpic.clear_output()\n",
-        "  with outpic:\n",
-        "    display(Image('result.jpg'))\n",
-        "  pbar.upd()\n",
-        "\n",
-        "def train(i, txt_enc, tempdir, pbar):\n",
-        "  loss = 0\n",
-        "  \n",
-        "  noise = noise_scale * torch.randn(1, 1, *params[0].shape[2:4], 1).cuda() if noise_scale > 0 else 0.\n",
-        "  img_out = image_f(noise)\n",
-        "  # img_out = image_f()\n",
-        "\n",
-        "  imgs_sliced = slice_imgs([img_out], samples, norm_in, overscan=overscan, micro=None)\n",
-        "  out_enc = model_vit.encode_image(imgs_sliced[-1])\n",
-        "  if dual_model is True: # use both clip models\n",
-        "      out_enc = torch.cat((out_enc, model_rn.encode_image(imgs_sliced[-1])), 1)\n",
-        "  loss -= 100*torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
-        "  del img_out, imgs_sliced, out_enc; torch.cuda.empty_cache()\n",
-        "\n",
-        "  optimizer.zero_grad()\n",
-        "  loss.backward()\n",
-        "  optimizer.step()\n",
-        "  \n",
-        "  if i % save_freq == 0:\n",
-        "    checkout(i // save_freq, tempdir, pbar)\n",
-        "\n",
         "def process(txt, num):\n",
+        "\n",
+        "  global params_start\n",
+        "  if num==0: # initial step\n",
+        "    init_pt = params_pt if resume is True else None\n",
+        "    params, image_f = fft_image([1, 3, sideY, sideX], resume=resume)\n",
+        "    params_start = params[0].detach().clone()\n",
+        "    torch.save(params_start, 'tmp.pt') # random init\n",
+        "  else: # further steps\n",
+        "    params, image_f = fft_image([1, 3, sideY, sideX], resume='tmp.pt')\n",
+        "  image_f = to_valid_rgb(image_f)\n",
+        "  optimizer = torch.optim.Adam(params, learning_rate)\n",
+        "    \n",
         "  print(' ref text: ', txt)\n",
         "  if translate:\n",
         "    translator = Translator()\n",
         "    txt = translator.translate(txt, dest='en').text\n",
         "    print(' translated to:', txt)\n",
         "  tx = clip.tokenize(txt).cuda()\n",
-        "  txt_enc = model_vit.encode_text(tx).detach().clone()\n",
-        "  if dual_model is True:\n",
-        "    txt_enc = torch.cat((txt_enc, model_rn.encode_text(tx).detach().clone()), 1)\n",
+        "  txt_enc = model_clip.encode_text(tx).detach().clone()\n",
         "  out_name = '%02d-%s' % (num, txt.translate(str.maketrans(dict.fromkeys(list(\"\\n',—|!?/:;\\\\\"), \"\"))).replace(' ', '_').replace('\"', ''))\n",
         "  tempdir = os.path.join(workdir, out_name)\n",
         "  os.makedirs(tempdir, exist_ok=True)\n",
         "\n",
-        "  pbar = ProgressBar(steps // save_freq)\n",
+        "  pbar = ProgressBar(steps) #  // save_freq\n",
         "  for i in range(steps):\n",
-        "    train(i, txt_enc, tempdir, pbar)\n",
+        "    loss = 0\n",
+        "    \n",
+        "    noise = noise_scale * torch.randn(1, 1, *params[0].shape[2:4], 1).cuda() if noise_scale > 0 else 0.\n",
+        "    img_out = image_f(noise)\n",
         "\n",
-        "  # shutil.copy(img_list(tempdir)[-1], os.path.join(workdir, '%s-%d.jpg' % (out_name, steps)))\n",
-        "  # os.system('ffmpeg -v warning -y -i %s\\%%03d.jpg \"%s.mp4\"' % (tempdir, os.path.join(workdir, out_name)))\n",
-        "  HTML(makevid(tempdir))\n",
+        "    imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=None)\n",
+        "    out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
+        "    loss -= torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
+        "    del img_out, imgs_sliced, out_enc; torch.cuda.empty_cache()\n",
+        "\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "    \n",
+        "    if i % show_freq == 0:\n",
+        "      with torch.no_grad():\n",
+        "        img = image_f(contrast=contrast).cpu().numpy()[0]\n",
+        "      # save_img(img, os.path.join(tempdir, '%04d.jpg' % (i // save_freq))))\n",
+        "      outpic.clear_output()\n",
+        "      with outpic:\n",
+        "        display(Image('result.jpg'))\n",
+        "      del img\n",
+        "\n",
+        "    pbar.upd()\n",
+        "\n",
+        "  if keep == 'all':\n",
+        "      params_start = ema(params_start, params[0].detach(), num+1)\n",
+        "      torch.save(params_start, 'tmp.pt')\n",
+        "  elif keep == 'last':\n",
+        "      torch.save((params_start + params[0].detach()) / 2, 'tmp.pt')\n",
+        "  \n",
+        "  torch.save(params[0], '%s.pt' % os.path.join(workdir, out_name))\n",
+        "  shutil.copy(img_list(tempdir)[-1], os.path.join(workdir, '%s-%d.jpg' % (out_name, steps)))\n",
+        "  # os.system('ffmpeg -v warning -y -i %s\\%%04d.jpg \"%s.mp4\"' % (tempdir, os.path.join(workdir, out_name)))\n",
+        "  # HTML(makevid(tempdir))\n",
         "\n",
         "for i, txt in enumerate(texts):\n",
         "    process(txt, i)\n",
         "\n",
-        "# %cd $work_dir\n",
-        "# vid_list = ['file ' + v.replace('\\\\', '/') for v in file_list(workdir, 'mp4')]\n",
-        "# with open('dir.txt', 'w') as ff:\n",
-        "  # ff.write('\\n'.join(vid_list))\n",
-        "# outname = basename(text_file) + '.mp4'\n",
-        "# !ffmpeg -y -v warning -f concat -i dir.txt -c:v copy $outname\n",
-        "# os.system('ffmpeg -y -v warning -f concat -i dir.txt -c:v copy %s.mp4' % basename(text_file))\n",
-        "# os.remove('dir.txt')\n"
+        "vsteps = int(duration * fps / len(texts))\n",
+        "tempdir = os.path.join(workdir, '_final')\n",
+        "os.makedirs(tempdir, exist_ok=True)\n",
+        "\n",
+        "def read_pt(file):\n",
+        "  return torch.load(file).cuda()\n",
+        "\n",
+        "print(' rendering complete piece')\n",
+        "ptfiles = file_list(workdir, 'pt')\n",
+        "pbar = ProgressBar(vsteps * len(ptfiles))\n",
+        "for px in range(len(ptfiles)):\n",
+        "  params1 = read_pt(ptfiles[px])\n",
+        "  params2 = read_pt(ptfiles[(px+1) % len(ptfiles)])\n",
+        "\n",
+        "  params, image_f = fft_image([1, 3, sideY, sideX], resume=params1)\n",
+        "  image_f = to_valid_rgb(image_f)\n",
+        "\n",
+        "  for i in range(vsteps):\n",
+        "    with torch.no_grad():\n",
+        "      img = image_f((params2 - params1) * math.sin(1.5708 * i/vsteps)**2)[0].permute(1,2,0)\n",
+        "      img = torch.clip(img*255, 0, 255).cpu().numpy().astype(np.uint8)\n",
+        "    imsave(os.path.join(tempdir, '%05d.jpg' % (px * vsteps + i)), img)\n",
+        "    pbar.upd()\n",
+        "\n",
+        "os.system('ffmpeg -v warning -y -i %s\\%%05d.jpg \"%s.mp4\"' % (tempdir, os.path.join(work_dir, basename(text_file))))\n",
+        "if keep is True: os.remove('tmp.pt')\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
