continuous mode fixes

--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -142,7 +142,7 @@
         "    return next * scale_ma + base * (1.- scale_ma)\r\n",
         "\r\n",
         "def makevid(seq_dir, size=None):\r\n",
-        "  out_sequence = seq_dir + '/%03d.jpg'\r\n",
+        "  out_sequence = seq_dir + '/%05d.jpg'\r\n",
         "  out_video = seq_dir + '.mp4'\r\n",
         "  !ffmpeg -y -v warning -i $out_sequence $out_video\r\n",
         "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\r\n",
@@ -183,7 +183,7 @@
         "Try adding `noise_scale` to explore some compositional aspects.  \r\n",
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \r\n",
         "Increasing `steps` will elaborate details and make tones smoother, but may start throwing texts like graffiti (and will obviously take more time).  \r\n",
-        "`show_freq` controls preview frequency and doesn't affect the results (so set it higher to speed up process). "
+        "`show_freq` controls preview frequency (doesn't affect the results, set it higher to speed up process). "
       ]
     },
     {
@@ -250,7 +250,7 @@
         "  global params_start\n",
         "  if num==0: # initial step\n",
         "    init_pt = params_pt if resume is True else None\n",
-        "    params, image_f = fft_image([1, 3, sideY, sideX], resume=resume)\n",
+        "    params, image_f = fft_image([1, 3, sideY, sideX], resume=init_pt)\n",
         "    params_start = params[0].detach().clone()\n",
         "    torch.save(params_start, 'tmp.pt') # random init\n",
         "  else: # further steps\n",
@@ -288,7 +288,7 @@
         "    if i % show_freq == 0:\n",
         "      with torch.no_grad():\n",
         "        img = image_f(contrast=contrast).cpu().numpy()[0]\n",
-        "      # save_img(img, os.path.join(tempdir, '%04d.jpg' % (i // save_freq))))\n",
+        "      save_img(img, os.path.join(tempdir, '%05d.jpg' % (i // show_freq)))\n",
         "      outpic.clear_output()\n",
         "      with outpic:\n",
         "        display(Image('result.jpg'))\n",
@@ -303,8 +303,8 @@
         "      torch.save((params_start + params[0].detach()) / 2, 'tmp.pt')\n",
         "  \n",
         "  torch.save(params[0], '%s.pt' % os.path.join(workdir, out_name))\n",
-        "  shutil.copy(img_list(tempdir)[-1], os.path.join(workdir, '%s-%d.jpg' % (out_name, steps)))\n",
-        "  # os.system('ffmpeg -v warning -y -i %s\\%%04d.jpg \"%s.mp4\"' % (tempdir, os.path.join(workdir, out_name)))\n",
+        "  # shutil.copy(img_list(tempdir)[-1], os.path.join(workdir, '%s-%d.jpg' % (out_name, steps)))\n",
+        "  # os.system('ffmpeg -v warning -y -i %s\\%%05d.jpg \"%s.mp4\"' % (tempdir, os.path.join(workdir, out_name)))\n",
         "  # HTML(makevid(tempdir))\n",
         "\n",
         "for i, txt in enumerate(texts):\n",
@@ -331,15 +331,24 @@
         "    with torch.no_grad():\n",
         "      img = image_f((params2 - params1) * math.sin(1.5708 * i/vsteps)**2)[0].permute(1,2,0)\n",
         "      img = torch.clip(img*255, 0, 255).cpu().numpy().astype(np.uint8)\n",
-        "    imsave(os.path.join(tempdir, '%05d.jpg' % (px * vsteps + i)), img)\n",
+        "    imageio.imsave(os.path.join(tempdir, '%05d.jpg' % (px * vsteps + i)), img)\n",
         "    pbar.upd()\n",
         "\n",
-        "os.system('ffmpeg -v warning -y -i %s\\%%05d.jpg \"%s.mp4\"' % (tempdir, os.path.join(work_dir, basename(text_file))))\n",
-        "if keep is True: os.remove('tmp.pt')\n",
+        "HTML(makevid(tempdir))\n",
         "\n"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xbHJ5PtDi7OQ"
+      },
+      "source": [
+        "Short note about `keep` option:  \r\n",
+        "By default (`keep = None`), every frame is produced independently (randomly initiated). `keep = all` starts each generation from the average of previous runs; on practice that means similar compositions and smoother transitions. `keep = last` starts generation closer to the last previous run; that make every frame look more like previous (and a sequence - even more continuous), but it may lead imagery to getting stuck; so use the latter with care. "
+      ]
     }
   ]
 }
