--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -141,10 +141,18 @@
         "    scale_ma = 1. / (step + 1)\r\n",
         "    return next * scale_ma + base * (1.- scale_ma)\r\n",
         "\r\n",
+        "def save_img(img, fname=None):\r\n",
+        "  img = np.array(img)[:,:,:]\r\n",
+        "  img = np.transpose(img, (1,2,0))  \r\n",
+        "  img = np.clip(img*255, 0, 255).astype(np.uint8)\r\n",
+        "  if fname is not None:\r\n",
+        "    imageio.imsave(fname, np.array(img))\r\n",
+        "    imageio.imsave('result.jpg', np.array(img))\r\n",
+        "\r\n",
         "def makevid(seq_dir, size=None):\r\n",
         "  out_sequence = seq_dir + '/%05d.jpg'\r\n",
         "  out_video = seq_dir + '.mp4'\r\n",
-        "  !ffmpeg -y -v warning -i $out_sequence $out_video\r\n",
+        "  !ffmpeg -y -v quiet -i $out_sequence $out_video\r\n",
         "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\r\n",
         "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\r\n",
         "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\r\n",
@@ -180,7 +188,7 @@
         "Select CLIP `model` (results do vary!). I prefer ViT for consistency.  \r\n",
         "\r\n",
         "Set `overscan` to produce semi-seamlessly tileable texture (when off, it's more centered).  \r\n",
-        "Try adding `noise_scale` to explore some compositional aspects.  \r\n",
+        "Try adding `noise_scale` to explore some compositional changes.  \r\n",
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \r\n",
         "Increasing `steps` will elaborate details and make tones smoother, but may start throwing texts like graffiti (and will obviously take more time).  \r\n",
         "`show_freq` controls preview frequency (doesn't affect the results, set it higher to speed up process). "
@@ -233,28 +241,30 @@
         "\n",
         "workdir = os.path.join(work_dir, basename(text_file))\n",
         "workdir += '-%s' % model if 'RN' in model.upper() else ''\n",
+        "os.makedirs(workdir, exist_ok=True)\n",
         "\n",
         "outpic = ipy.Output()\n",
         "outpic\n",
         "  \n",
-        "def save_img(img, fname=None):\n",
-        "  img = np.array(img)[:,:,:]\n",
-        "  img = np.transpose(img, (1,2,0))  \n",
-        "  img = np.clip(img*255, 0, 255).astype(np.uint8)\n",
-        "  if fname is not None:\n",
-        "    imageio.imsave(fname, np.array(img))\n",
-        "    imageio.imsave('result.jpg', np.array(img))\n",
+        "# make init\n",
+        "global params_start\n",
+        "params_shape = [1, 3, sideY, sideX//2+1, 2]\n",
+        "params_start = torch.randn(*params_shape).cuda() # random init\n",
+        "\n",
+        "if resume is True:\n",
+        "  # print(' resuming from', resumed)\n",
+        "  params, _ = fft_image([1, 3, sideY, sideX], resume = params_pt)\n",
+        "  params_start = ema(params_start, params[0].detach(), 1) \n",
+        "  torch.save(params_pt, os.path.join(workdir, '000-start.pt'))\n",
+        "else:\n",
+        "  torch.save(params_start, os.path.join(workdir, '000-start.pt'))\n",
+        "\n",
+        "torch.save(params_start, 'init.pt') # final init\n",
         "\n",
         "def process(txt, num):\n",
         "\n",
         "  global params_start\n",
-        "  if num==0: # initial step\n",
-        "    init_pt = params_pt if resume is True else None\n",
-        "    params, image_f = fft_image([1, 3, sideY, sideX], resume=init_pt)\n",
-        "    params_start = params[0].detach().clone()\n",
-        "    torch.save(params_start, 'tmp.pt') # random init\n",
-        "  else: # further steps\n",
-        "    params, image_f = fft_image([1, 3, sideY, sideX], resume='tmp.pt')\n",
+        "  params, image_f = fft_image([1, 3, sideY, sideX], resume='init.pt')\n",
         "  image_f = to_valid_rgb(image_f)\n",
         "  optimizer = torch.optim.Adam(params, learning_rate)\n",
         "    \n",
@@ -298,9 +308,9 @@
         "\n",
         "  if keep == 'all':\n",
         "      params_start = ema(params_start, params[0].detach(), num+1)\n",
-        "      torch.save(params_start, 'tmp.pt')\n",
+        "      torch.save(params_start, 'init.pt')\n",
         "  elif keep == 'last':\n",
-        "      torch.save((params_start + params[0].detach()) / 2, 'tmp.pt')\n",
+        "      torch.save((params_start + params[0].detach()) / 2, 'init.pt')\n",
         "  \n",
         "  torch.save(params[0], '%s.pt' % os.path.join(workdir, out_name))\n",
         "  # shutil.copy(img_list(tempdir)[-1], os.path.join(workdir, '%s-%d.jpg' % (out_name, steps)))\n",
@@ -347,7 +357,10 @@
       },
       "source": [
         "Short note about `keep` option:  \r\n",
-        "By default (`keep = None`), every frame is produced independently (randomly initiated). `keep = all` starts each generation from the average of previous runs; on practice that means similar compositions and smoother transitions. `keep = last` starts generation closer to the last previous run; that make every frame look more like previous (and a sequence - even more continuous), but it may lead imagery to getting stuck; so use the latter with care. "
+        "`keep = None`: every frame is produced independently (init = random).  \r\n",
+        "`keep = all`: init generation with the average of previous runs (means closer compositions and smoother transitions).  \r\n",
+        "`keep = last`: init generation with the last run; result is even smoother and more continuous, but may tend to getting stuck.  \r\n",
+        "This behaviour heavily depends on the input, so test with your prompts and see what's better in your case."
       ]
     }
   ]
