--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -81,7 +81,7 @@
         "  # from pprint import pprint\r\n",
         "  translator = Translator()\r\n",
         "except: pass\r\n",
-        "!pip install ftfy\r\n",
+        "!pip install ftfy==5.8\r\n",
         "\r\n",
         "import os\r\n",
         "import io\r\n",
