--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -76,7 +76,7 @@
         "  from googletrans import Translator, constants\r\n",
         "  translator = Translator()\r\n",
         "except: pass\r\n",
-        "!pip install ftfy\r\n",
+        "!pip install ftfy==5.8\r\n",
         "\r\n",
         "!apt-get -qq install ffmpeg\r\n",
         "from google.colab import drive\r\n",
